<resources>
    <string name="app_name">myCV</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="beforeHeadToRegister">Don\'t Have an Account Yet? </string>
    <string name="headToRegister">Register</string>
    <string name="firstName">Plz Enter Your First Name</string>
    <string name="lastName">Plz Enter Your Last Name</string>
    <string name="confirmPass">Plz Enter Your Password Again</string>
    <string name="phone">Phone(Ex): 0912-9997788</string>
    <string name="email">Plz Enter Your Email</string>
    <string name="regBtn">Register</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
</resources>
