<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/bg_pic"
    tools:context=".mvp.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLoginUsername"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/username"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/background_tint"
                android:drawableEnd="@drawable/username"
                android:hint="@string/username"
                android:inputType="text"
                android:lines="1"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLoginPassword"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/pass"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:backgroundTint="@color/background_tint"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="12sp"
                android:text="@string/beforeHeadToRegister"
                android:textColor="@color/btn_register_border"
                android:layout_marginTop="5dp"/>
            <Button
                android:id="@+id/btnHeadToRegister"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:padding="0dp"
                android:background="@null"
                android:layout_marginTop="5dp"
                android:text="@string/headToRegister"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>